# multipec-core

./: README.md  pyproject.toml  setup.py
data/input/cnn/: model.pth  optimizer.pth
data/output/cnn/: nets.p  nets_05median.p  nets_05up.p  nets_12.p  nets_23.p  nets_34.p  nets_34_cfc.p  nets_45_cfc.p  nets_4down.p  nets_5down_cfc.p  pairs.p  pairs_cfc.p
data/output/simulation/multi/: 2nets_5bits.xlsx  2nets_5bits_channels.xlsx  2nets_5bits_stimuli.xlsx  2nets_6bits.xlsx  2nets_6bits_channels.xlsx  2nets_6bits_stimuli.xlsx  3nets_5bits.xlsx  3nets_5bits_channels.xlsx  3nets_5bits_stimuli.xlsx  3nets_6bits.xlsx  3nets_6bits_channels.xlsx  3nets_6bits_stimuli.xlsx
data/results/cnn/: global_random_pruning_log.xlsx  pec_class_specificity_data.xlsx  pruned_05median.xlsx  pruned_05up.xlsx  pruned_12.xlsx  pruned_23.xlsx  pruned_34.xlsx  pruned_4down.xlsx  pruned_full.xlsx  pruned_random_100runs.xlsx
data/results/eeg/: subject_classification_summary.csv
docs/: input_cnn.md  input_eeg.md  installation.md  modules.md  usage_cnn.md  usage_eeg.md
multipec/: awc.py  cnn_activation.py  cnn_preprocess.py  cnn_pruning.py  cnn_pruning_random.py  cnn_train.py  data.py  data_legacy.py  eeg_preprocess.py  multipec_nets.py
multipec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: cnn_class_specificity.ipynb  cnn_pruning_random_specificity.ipynb  cnn_pruning_results.ipynb  cnn_random_pruning_specificity.ipynb  cnn_random_results.ipynb  eeg_results.ipynb  eeg_results_old.ipynb  simulation_bits_multipec.ipynb  simulation_bits_pairwise.ipynb
(+8 files in other folders)
